# Chestnut

./: .gitignore  2d_array_aligned_example.cu  2d_array_example.cu  CMakeLists.txt  CNAME  COPYING  INSTALL  Missing Functionality.txt  NOTES  README  README.markdown  array_location.cu  code.css  cudatest.cu  fluid.cu  index.html  runChestnutCode.sh  setup.cfg  setup.py  side_by_side.py  startupChestnut.sh  style.css
CUDA/: 2d_array_example.cu  CMakeLists.txt  FluidView.cpp  FluidView.h  array_wrap.cu  fluid.cpp  fluid.cu  game_of_life.cu  game_of_life_thrust.cu  mandelbrot.cu  map_benchmark.cu  map_example.cu  matrix-operations.cu  overpainting.py  pycuda_example.py  pycuda_glexample.py  pycuda_gui.py  pycuda_mandelbrot.py  pycuda_ripple.py  texture.cu
CUDA/reduction/: reduction_kernel.cu  sharedmem.cuh
chestnut/: CMakeLists.txt  ParseLibs.cpp  ParseLibs.h  ParseLibs.inl  builtins.py  compiler.py  conversions.py  exceptions.py  interpreter.py  node_helpers.py  nodes.py  parser.py  symboltable.py
chestnut/backends/: pycuda.py  python.py  walnut.py
chestnut/templates/: base.cpp
chestnut/templates/walnut/: base.cpp  block.cpp  cuda_check_error.h
cmake/modules/: FindChestnut.cmake  FindThrust.cmake
compiler/: builtins.py  chestnut-compiler  compiler.py  gui.py  interpreter.py  nodes.py  parser.py  symboltable.py  templates.py
compiler/templates/: base.cpp  object_declaration.cpp
cudalang/: CMakeLists.txt  ParseLibs.h  testdata  thrust
documentation/: Makefile  conf.py  index.rst  introduction.rst  parallel_context.rst  tutorial.rst
examples/: 3d.chestnut  CMakeLists.txt  Makefile  README  array_reduce.chestnut  diffusion.chestnut  display.chestnut  divergence.chestnut  file_io.chestnut  flow.chestnut  game_of_life.chestnut  gradient.chestnut  heat.data  heatflow.chestnut  heatflow_new_syntax.chestnut  julia.chestnut  laplacian.chestnut  mandelbrot.chestnut  matrix_multiply.chestnut  minimal.chestnut  particle_filter.chestnut  people_simulation.chestnut  random.chestnut  reading.chestnut  reduce.chestnut  ripple.chestnut  sample.chestnut  sequential.chestnut  simple.data  small_game_of_life.chestnut  sort.chestnut  structures.chestnut  test.chestnut  vector_addition.chestnut
experiments/: CMakeLists.txt  Makefile.txt  big_gol.chestnut  bigheatflow.chestnut  bigheatflow.cu  bigmandelbrot.chestnut  bigmandelbrot.cu  bigmm.chestnut  bigmm.cu  game_of_life.chestnut  game_of_life.cu  game_of_life_400x400.chestnut  game_of_life_400x400.cu  game_of_life_800x800.chestnut  game_of_life_800x800.cu  heatflow.chestnut  heatflow.cpp  heatflow.cu  mandelbrot.chestnut  mandelbrot.cpp  mandelbrot.cu  matrix_multiply.chestnut  matrix_multiply.cpp  matrix_multiply.cu  run.sh  runbig.sh  thrust
gui/: CMakeLists.txt  chestnut.cpp  connection.cpp  connection.h  data.cpp  data.h  datablock.cpp  datablock.h  datablock.ui  datautils.cpp  datautils.h  drawingutils.cpp  drawingutils.h  function.cpp  function.h  icons.qrc  input.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  object.cpp  object.h  operation.cpp  operation.h  output.h  output.ui  palettedelegate.cpp  palettedelegate.h  palettemodel.cpp  palettemodel.h  print.cpp  print.h  reduce.cpp  reduce.h  runoutput.ui  scene.cpp  scene.h  sink.cpp  (+16 more)
latex/: final-report.tex  proposal.tex  references.bib
libnuts/: CMakeLists.txt  DisplayWindow.cpp  DisplayWindow.h
papers/cs87/: .gitignore  annotated-bib.tex  final-report.tex  plain-annote.bst  proposal.tex
papers/summer/: .gitignore  Makefile  chestnut.summer.analysis.tex  chestnut.summer.intro.tex  chestnut.summer.methods.tex  chestnut.summer.preamble.tex  chestnut.summer.results.tex  chestnut.summer.tex  chestnut.summer.theory.tex  references.bib
papers/thesis/: .gitignore  Makefile  appendix.tex  body.tex  chestnut.thesis.abstract.tex  chestnut.thesis.analysis.tex  chestnut.thesis.conclusions.tex  chestnut.thesis.intro.tex  chestnut.thesis.related_work.tex  chestnut.thesis.results.tex  chestnut.thesis.tex  futurework.tex  intro.tex  methods.tex  preamble.tex  references.bib  related_work.tex
parser/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Makefile  ParseUtils.cpp  ParseUtils.h  ParseUtils_Foreach.cpp  ParseUtils_Functions.cpp  ParseUtils_HelperFunctions.cpp  ParseUtils_InputOutput.cpp  ParseUtils_Timer.cpp  ParseUtils_Variables.cpp  SymbolEntry.h  SymbolTable.cpp  SymbolTable.h  SymbolTable.inl  Utilities.cpp  Utilities.h  Utilities.inl  chestnut.in  chestnut.l  chestnut.y  chestnut_grammer.txt  compiler.py  divergence.chestnut  gui.py  interpreter.py  laplacian.chestnut  mandelbrot.chestnut  minimal.chestnut  nodes.py  parser.py  runparse.sh  sample.chestnut  symboltable.py  templates.py  testmap.in  testmap.l  testmap.y
parser/cxx_and_bison/: ChangeLog  ast.h  create  cxx_and_bison.html  grammar.y
parser/lex-yacc-examples/: example1.l  example6.l
presentation/: Chestnut Internals - June 29 2011.key  Chestnut Intro - June 1 2011.key  chestnut_chestnut.cu  chestnut_cuda.cu  chestnut_thrust.cu
results/: game_of_life  mandelbrot  matrix_multiply
scripts/: CMakeLists.txt  chestnut  chestnut-compiler  chestnut-parser
sequential/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  main.cpp  mandelbrot.cpp  mapreduce.cpp  matrix_multiply.cpp
tests/: run_tests.py  test_parse_errors.py
tests/error_sources/: error_invalid_lhs.cmm  error_undeclared_ref.cmm  mismatched_data_sizes.chestnut  missing_closing_brace.chestnut  missing_closing_bracket.chestnut  (+4 more)
thrust_examples/: CMakeLists.txt  sum.cu  thrust
vim/: chestnut.vim  readme  vimrc.chestnut
virtualenv/: .gitignore  requirements.txt  setup.sh
walnut/: Array.cu  Array.h  Array2d.cu  Array2d.h  ArrayAllocator.cpp  ArrayAllocator.cu  ArrayAllocator.h  CMakeLists.txt  Color.h  ColorKernels.h  DeviceData.cu  DeviceData.h  DisplayWindow.cpp  DisplayWindow.h  FunctionIterator.cpp  FunctionIterator.h  HostFunctions.cpp  HostFunctions.h  Points.h  Sizes.h  UtilityFunctors.cpp  UtilityFunctors.cu  UtilityFunctors.h  Windows.cu  Windows.h  gl_extensions.h  walnut_global.cu  walnut_global.h
(+86 files in other folders)
